@@ -1,3 +1,11 @@
+2008-08-04  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-ip4.c
+	  src/connection-editor/ce-page-ip4.glade
+		- De-sensitize all widgets that don't make sense for a given IP4 method
+		- Add a 'routes' button
+		- Make the examples tooltips rather than widgets
+
 2008-08-01  Dan Williams  <dcbw@redhat.com>
 
 	* src/utils/utils.c
